dnl Process this file with autoconf to produce a configure script.
AC_INIT(vmpsd.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(vmpsd, 1.3)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

my_libraries="socket nsl resolv"

AC_SEARCH_LIBS(inet_ntoa, 	$my_libraries)
AC_SEARCH_LIBS(inet_aton, 	$my_libraries)
AC_SEARCH_LIBS(socket, 		$my_libraries)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/file.h sys/ioctl.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIGNAL

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_SETPGRP
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS(socket)
AC_CHECK_FUNCS(vsprintf,,[AC_MSG_ERROR([Sorry vsprintf is required for now.])])
AC_CHECK_FUNCS(sigaction)

dnl Features 
AC_ARG_ENABLE(snmp, [  --enable-snmp           use SNMP library, if available.  [default=no]],enable_snmp=yes)

if test "$enable_snmp" = yes; then
	AC_DEFINE(HAVE_SNMP)
	SNMP_LIB="-lsnmp"
	SNMP_SOURCES="snmp.c"
	SNMP_OBJECTS="snmp.o"
	AC_SUBST(SNMP_SOURCES)
	AC_SUBST(SNMP_OBJECTS)
	AC_SUBST(SNMP_LIB)
fi 

AC_OUTPUT(Makefile)
